force-app/main/default/objects/SAP_Cost_Revenue_Data__c/SAP_Cost_Revenue_Data__c.object-meta.xml
<CustomObject>
    <label>SAP Cost Revenue Data</label>
    <nameField>
        <displayFormat>S{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Cost Revenue Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>