force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mapping__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>&quot;Business Orgnization and Name Mapping&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipName>SAP_Cost_Revenue_Data</relationshipName>
    <type>Lookup</type>
</CustomField>