force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Company_Code__r.Mapping_Name__c</formula>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>