force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <label>Cost(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>