force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SAP_Cost_Revenue_Data</relationshipName>
    <type>Lookup</type>
</CustomField>