force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Customer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipName>SAP_Cost_Revenue_Data</relationshipName>
    <type>Lookup</type>
</CustomField>