force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>Business_Scope__r.Mapping_Code__c</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>