force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Product_Line_Last_Year_Rank__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Last_Year_Rank__c</fullName>
    <formula>Customer_Product_Line__r.Rank_Of_Last_Year__c</formula>
    <label>Product Line Last Year Rank</label>
    <type>Text</type>
</CustomField>