force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Product_Line_Rank__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Rank__c</fullName>
    <formula>TEXT(Customer_Product_Line__r.Rank__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Rank</label>
    <type>Text</type>
</CustomField>