force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Text__c</fullName>
    <label>Product Line(Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>