force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Sales_Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Gross_Revenue__c</fullName>
    <label>Sales Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>