force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Sales_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue_USD__c</fullName>
    <label>Sales Net Revenue(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>