force-app/main/default/objects/SAP_Cost_Revenue_Data__c/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <label>Sales Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>