force-app/main/default/objects/SAP_Cost_Revenue_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Cost__c</columns>
    <columns>Cost_USD__c</columns>
    <columns>Sales_Revenue__c</columns>
    <columns>Sales_Revenue_USD__c</columns>
    <columns>Sales_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_SAP_Code__c</field>
        <operation>equals</operation>
        <value>0000503548</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <filters>
        <field>Month__c</field>
        <operation>equals</operation>
        <value>06</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Mobile</value>
    </filters>
    <label>All</label>
</ListView>