force-app/main/default/objects/SAP_Cost_Revenue_Data__c/listViews/Hisense_Australia.listView-meta.xml
<ListView>
    <fullName>Hisense_Australia</fullName>
    <columns>Customer__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Sales_Revenue_USD__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Company_Code__c</field>
        <operation>equals</operation>
        <value>8200</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Refrigerator</value>
    </filters>
    <label>Hisense Australia</label>
    <sharedTo>
        <group>HQ_Group</group>
    </sharedTo>
</ListView>